--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: 基于自回归流的文本到语音合成网络
+description: 展示网页
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
