--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: an Autoregressive Flow-based Generative Network for Text-to-Speech Synthesis
-description: Demo page
+description: A demo page
+show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
