--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: an Autoregressive Flow-based Generative Network for Text-to-Speech Synthesis
-description: A demo page
+title: An Autoregressive Flow-based Generative Network for Text-to-Speech Synthesis
+description: A demo page by Jun Chen.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
